Finalize js and img

--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
       <a href="/">PNG</a>
     </div>
     <div>
-      <a href="/pdf">PDF</a>
+      <a href="/img/jack_shadow.pdf" target="_blank">PDF</a>
     </div>
   </nav>
   <article>
     <div class="pad"></div>
-    <img />
+    <img src="/img/1_1x.png" alt="a render of an instruction step" id="mainImg"/>
     <div class="pad"></div>
   </article>
   <div class="gallery">
-    <button type="button">&lt;</button>
-    <button type="button">&gt;</button>
+    <button type="button" class="prev">&lt;</button>
+    <button type="button" class="next">&gt;</button>
   </div>
   
 
